--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
